Fixes issue #1470 - Add --illegal-access=permit to run the tests (#1471)