@@ -141,6 +141,9 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-failsafe-plugin</artifactId>
                     <version>3.0.0-M4</version>
+                    <configuration>
+                        <argLine>--illegal-access=permit</argLine>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -193,6 +196,7 @@
                     <version>3.0.0-M5</version>
                     <configuration>
                         <trimStackTrace>false</trimStackTrace>
+                        <argLine>--illegal-access=permit</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
